# NebuShell

./: CMakeLists.txt  LICENSE  README.md  constants.h  main.c  main.h
internal/: bin.c  bin.h  bootstrap.c  bootstrap.h  file_handler.c  file_handler.h  history.c  history.h  jobs.c  jobs.h  parser.c  parser.h
tools/: alias.c  alias.h  bootstrap.c  file_handler.c  file_handler.h  help.c  help.h  list_directory.c  list_directory.h  nebula_tools.c  nebula_tools.h  signal_handler.c  signal_handler.h
txt/: help1.txt  help_1  help_default
utils/: bin.c  bin.h  binaries_execution.c  binaries_execution.h  formatter.c  formatter.h  history.c  history.h  nebula_tools.c  nebula_tools.h  parser.c  parser.h  signal_handler.c  signal_handler.h
